@@ -13,7 +13,6 @@
 @import 'lib/reset.css';
 @import 'lib/typography.css';
 @import 'lib/grid.css';
-@import 'lib/buttons.css';
 
 
 /* Compressed version (re-compress if you change the core files): 
@@ -26,4 +25,4 @@
 
 
 /* Uncomment the line below to see the grid and baseline. */
-/* .container { background: url(lib/img/grid.png); } */
+/* .container { background: url(lib/grid.png); } */
